twitter_based_predict/Regression/only_year.result
  File "/vagrant/twitter_based_predict/Regression/regression.py", line 21
    return LabeledPoint(-1, [0]])
                               ^
SyntaxError: invalid syntax
